feat: Implement multithreading based on shared memory

--- a/examples/basic/static/index.html
+++ b/examples/basic/static/index.html
@@ -14,7 +14,7 @@
       <ul>
       </ul>
     </nav>
-    <h1 class="title">Enjoy WebGPU + WASM + Webpack with 🍰☕</h1>
+    <h1 class="title">Enjoy 🍰☕ WebGPU + WASM</h1>
   </header>
   <main>
     <section>
