--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -23,24 +23,24 @@
 
     <button
       type="button"
-      id="btnSingle"
+      id="btnCpu"
       class="bg-indigo-500 disabled:bg-gray-700 text-white font-bold text-xs py-2"
     >
-      Draw using single worker
-    </button>
-    <button
-      type="button"
-      id="btnMulti"
-      class="bg-indigo-500 disabled:bg-gray-700 text-white font-bold text-xs py-2"
-    >
-      Draw using multiple workers
+      Draw on N workers
     </button>
     <button
       type="button"
       id="btnGpu"
       class="bg-indigo-500 disabled:bg-gray-700 text-white font-bold text-xs py-2"
     >
-      Draw using GPU
+      Draw on GPU
+    </button>
+    <button
+      type="button"
+      id="btnCpuGpu"
+      class="bg-indigo-500 disabled:bg-gray-700 text-white font-bold text-xs py-2"
+    >
+      Draw on CPU + GPU (discarding slow frame)
     </button>
     <button
       type="button"
